kitap listeleme create edit tamamlndı

--- a/Library.Admin/Views/Shared/_Layout.cshtml
+++ b/Library.Admin/Views/Shared/_Layout.cshtml
@@ -106,7 +106,7 @@
                 <ul class="page-sidebar-menu  page-header-fixed" data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
                     
                         <li class="nav-item @SetMenuClass("")">
-                            <a href="/User/Index" class="nav-link nav-toggle">
+                            <a href="/UserPanel/Index" class="nav-link nav-toggle">
                                 <i class="icon-users"></i>
                                 <span class="title">Kullanıcılar</span>
                             </a>
@@ -114,15 +114,15 @@
                     
                    
                         <li class="nav-item @SetMenuClass("")">
-                            <a href="/Vendor/Index" class="nav-link nav-toggle">
-                                <i class="icon-basket-loaded"></i>
-                                <span class="title">Mağazalar</span>
+                            <a href="/BooksPanel/Index" class="nav-link nav-toggle">
+                                <i class="icon-book-open"></i>
+                                <span class="title">Kitaplar</span>
                             </a>
                         </li>
                     
                     <li class="nav-item  @SetMenuClass("")">
                         <a href="/Notification/Index" class="nav-link nav-toggle">
-                            <i class="icon-bulb"></i>
+                            <i class="icon-book-open"></i>
                             <span class="title">Duyurular</span>
                         </a>
                     </li>
