--- a/Library.Admin/Views/Shared/_Layout.cshtml
+++ b/Library.Admin/Views/Shared/_Layout.cshtml
@@ -120,12 +120,12 @@
                             </a>
                         </li>
                     
-                    <li class="nav-item  @SetMenuClass("")">
-                        <a href="/Notification/Index" class="nav-link nav-toggle">
-                            <i class="icon-book-open"></i>
-                            <span class="title">Duyurular</span>
-                        </a>
-                    </li>
+                        <li class="nav-item @SetMenuClass("")">
+                            <a href="/BorrowedBooksPanel/Index" class="nav-link nav-toggle">
+                                <i class="icon-book-open"></i>
+                                <span class="title">Ödünç Alınan Kitaplar</span>
+                            </a>
+                        </li>
 
 
                 </ul>
