--- a/Library.Admin/Views/Shared/_Layout.cshtml
+++ b/Library.Admin/Views/Shared/_Layout.cshtml
@@ -104,26 +104,38 @@
             <div class="page-sidebar navbar-collapse collapse">
 
                 <ul class="page-sidebar-menu  page-header-fixed" data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
-                    
-                        <li class="nav-item @SetMenuClass("")">
-                            <a href="/UserPanel/Index" class="nav-link nav-toggle">
-                                <i class="icon-users"></i>
-                                <span class="title">Kullanıcılar</span>
-                            </a>
-                        </li>
-                    
-                   
-                        <li class="nav-item @SetMenuClass("")">
-                            <a href="/BooksPanel/Index" class="nav-link nav-toggle">
-                                <i class="icon-book-open"></i>
-                                <span class="title">Kitaplar</span>
-                            </a>
-                        </li>
-                    
+
+                    <li class="nav-item @SetMenuClass("")">
+                        <a href="/UserPanel/Index" class="nav-link nav-toggle">
+                            <i class="icon-users"></i>
+                            <span class="title">Kullanıcılar</span>
+                        </a>
+                    </li>
+
+
+                    <li class="nav-item @SetMenuClass("")">
+                        <a href="/BooksPanel/Index" class="nav-link nav-toggle">
+                            <i class="icon-book-open"></i>
+                            <span class="title">Kitaplar</span>
+                        </a>
+                    </li>
+
                     <li class="nav-item  @SetMenuClass("")">
                         <a href="/Notification/Index" class="nav-link nav-toggle">
                             <i class="icon-book-open"></i>
                             <span class="title">Duyurular</span>
+                        </a>
+                    </li>
+                    <li class="nav-item @SetMenuClass("")">
+                        <a href="/BookRequestsPanel/Index" class="nav-link nav-toggle">
+                            <i class="icon-book-open"></i>
+                            <span class="title">Kitap İstekleri</span>
+                        </a>
+                    </li>
+                    <li class="nav-item @SetMenuClass("")">
+                        <a href="/ReportsPanel/Index" class="nav-link nav-toggle">
+                            <i class="icon-book-open"></i>
+                            <span class="title">Raporlar</span>
                         </a>
                     </li>
 
