User kitap ödünç alma eklendi

--- a/Library.Admin/Views/BookRequestsPanel/Index.cshtml
+++ b/Library.Admin/Views/BookRequestsPanel/Index.cshtml
@@ -7,7 +7,7 @@
 <h2 class="page-title">Kitap İstekleri Listesi</h2>
 <div class="page-bar">
     <ul class="page-breadcrumb">
-        Sistemde bulunan kitap istekleri aşağıda listelenmiştir.
+        Book requests in the system are listed below.
     </ul>
    
 </div>
@@ -19,7 +19,7 @@
             <div class="portlet-title">
                 <div class="caption">
                     <i class="icon-users font-dark"></i>
-                    <span class="caption-subject bold uppercase">Kitap istekleri</span>
+                    <span class="caption-subject bold uppercase">Book Requests</span>
                 </div>
 
             </div>
@@ -28,10 +28,10 @@
                     <thead>
                         <tr role="row">
 
-                            <th>Kullanıcı adı</th>
-                            <th>Kitap adı</th>
-                            <th>Müsaitlik</th>
-                            <th>aktiflik</th>
+                            <th>User Name</th>
+                            <th>Book Name</th>
+                            <th>Is Available</th>
+                            <th>Status</th>
                             
                             <th></th>
 
