--- a/Library.Admin/Views/BooksPanel/Index.cshtml
+++ b/Library.Admin/Views/BooksPanel/Index.cshtml
@@ -13,7 +13,7 @@
         <div class="btn-group pull-right">
             <a href="/BooksPanel/Create" class="btn btn-fit-height red">
                 <i class="fa fa-plus"></i>
-                Yeni Kitap
+                New Book Record
             </a>
         </div>
     </div>
@@ -26,7 +26,7 @@
             <div class="portlet-title">
                 <div class="caption">
                     <i class="icon-users font-dark"></i>
-                    <span class="caption-subject bold uppercase">Kitaplar</span>
+                    <span class="caption-subject bold uppercase">Books</span>
                 </div>
 
             </div>
@@ -35,14 +35,14 @@
                     <thead>
                         <tr role="row">
 
-                            <th>Kitap Adı</th>
-                            <th>Yazar</th>
+                            <th>Book Name</th>
+                            <th>Author Name</th>
                             <th>Barcode</th>
-                            <th>Kaynak Türü</th>
+                            <th>Resource Type</th>
                             <th>Campus</th>
-                            <th>Mevcut</th>
-                            <th>Basılı</th>
-                            <th>Durum</th>
+                            <th>Is Available</th>
+                            <th>Is Printed</th>
+                            <th>status</th>
                             <th></th>
 
 
