--- a/Library.Admin/Views/ReportsPanel/Index.cshtml
+++ b/Library.Admin/Views/ReportsPanel/Index.cshtml
@@ -15,17 +15,17 @@
                 <div class="col-md-12 FilterAreaListItem">
                     <div class="col-md-2" style="padding:0px;">
                         <label>
-                            <input type="radio" onclick="handleClick()" id="TimeFilter" value="0" class="TimeFilterRadio" name="TimeFilter" checked> Günlük Rapor
+                            <input type="radio" onclick="handleClick()" id="TimeFilter" value="0" class="TimeFilterRadio" name="TimeFilter" checked> Daily Report
                         </label>
                     </div>
                     <div class="col-md-2" style="padding:0px;">
                         <label style="margin-right:10px;">
-                            <input type="radio" id="TimeFilter" onclick="handleClick()" value="1" class="TimeFilterRadio" name="TimeFilter"> Haftalık Rapor
+                            <input type="radio" id="TimeFilter" onclick="handleClick()" value="1" class="TimeFilterRadio" name="TimeFilter"> Weekly Report
                         </label>
                     </div>
                     <div class="col-md-5" style="padding:0px;">
                         <label>
-                            <input type="radio" id="TimeFilter" onclick="handleClick()" value="2" class="TimeFilterRadio" name="TimeFilter"> Aylık Rapor
+                            <input type="radio" id="TimeFilter" onclick="handleClick()" value="2" class="TimeFilterRadio" name="TimeFilter"> Monthly Report
                         </label>
                     </div>
                     
@@ -36,8 +36,8 @@
                 <table id="dyntable" class="table table-striped dataTable table-hover nowrap stripe">
                     <thead>
                         <tr role="row">
-                            <th hidden>kampus</th>
-                            <th>Kampus adı</th>
+                            <th hidden>CampusID</th>
+                            <th>Campus</th>
                             <th></th>
                         </tr>
                         <tr class="sptl">
