--- a/Library.Admin/Views/BooksPanel/Edit.cshtml
+++ b/Library.Admin/Views/BooksPanel/Edit.cshtml
@@ -16,7 +16,7 @@
             new SelectListItem {Text = "Pasif", Value = "False"},}, "Value", "Text");
 }
 
-<h2 class="page-title">Kitap Listesi</h2>
+<h2 class="page-title">Edit Book Record </h2>
 
 <div class="portlet box">
     <div class="portlet-body form">
@@ -25,12 +25,12 @@
             @Html.AntiForgeryToken()
             <div class="form-body">
                 <div class="alert alert-danger display-hide">
-                    <button class="close" data-close="alert"></button> Lütfen zorunlu alanları doldurunuz.
+                    <button class="close" data-close="alert"></button> Please fill the required fields.
                 </div>
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="control-label col-md-3">Kitap adı</label>
+                            <label class="control-label col-md-3">Book Name</label>
                             <div class="col-md-9">
                                 <div class="input-icon right">
                                     
@@ -42,7 +42,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="control-label col-md-3">Yazar Adı</label>
+                            <label class="control-label col-md-3">Author Name</label>
                             <div class="col-md-9">
                                 <div class="input-icon right">
                                    
@@ -68,7 +68,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="control-label col-md-3">Kampüs</label>
+                            <label class="control-label col-md-3">Campus</label>
                             <div class="col-md-9">
                                 @Html.DropDownListFor(Model => Model.CampusID, new SelectList(ViewBag.Campuses, "CampusID", "CampusName"), "Kampüs seçiniz", new { @id = "CampusID", @class = "form-control", @required = true })
 
@@ -78,7 +78,7 @@
                 </div>
                 <div class="row">
                     <div class="form-group">
-                        <label class="control-label col-md-3">Kitap Özeti</label>
+                        <label class="control-label col-md-3">Book Summary</label>
                         <div class="col-md-9">
                             
                                 <textarea type="text" rows="4" maxlength="1000" class="form-control" value="@Model.Summary" name="Summary" required></textarea>
@@ -88,7 +88,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="control-label col-md-3">Kitap Türü</label>
+                                <label class="control-label col-md-3">Book Type</label>
                                 <div class="col-md-9">
                                     @Html.DropDownListFor(Model => Model.ResourceTypeID, new SelectList(ViewBag.ResourceTypes, "ResourceTypeID", "ResourceTypeName"), "Kullanıcı tipini seçiniz", new { @id = "ResourceTypeID", @class = "form-control", @required = true })
 
@@ -102,7 +102,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="control-label col-md-3">Mevcut mu</label>
+                            <label class="control-label col-md-3">Is Available</label>
                             <div class="col-md-9">
 
                                 @Html.DropDownListFor(m => m.IsAvailable, availableSelectList, "Mevcut olma durumu", new { @class = "form-control ", @required = true })
@@ -111,7 +111,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="control-label col-md-3">Kayıt Durumu</label>
+                            <label class="control-label col-md-3">Is Printed</label>
                             <div class="col-md-9">
 
                                 @Html.DropDownListFor(m => m.IsPrinted, isPrintedSelectList, "Basılı olma durumu", new { @class = "form-control ", @required = true })
@@ -122,7 +122,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="control-label col-md-3">Kayıt Durumu</label>
+                            <label class="control-label col-md-3">Status</label>
                             <div class="col-md-9">
 
                                 @Html.DropDownListFor(m => m.IsActive, selectList, "Aktiflik durumu", new { @class = "form-control ", @required = true })
@@ -137,8 +137,8 @@
                     <div class="col-md-12">
                         <div class="row">
                             <div class="pull-left col-md-3">
-                                <a href="/BooksPanel/Index" class="btn red">İptal</a>
-                                <button id="btnSave" type="button" name="Save" class="btn blue">Kaydet</button>
+                                <a href="/BooksPanel/Index" class="btn red">Cancel</a>
+                                <button id="btnSave" type="button" name="Save" class="btn blue">Save</button>
                             </div>
                         </div>
                     </div>
@@ -153,7 +153,7 @@
 
         @if(ViewBag.Error == "Error")
         {
-            @: toastr.error("Kullanıcı kaydı güncellenemedi", "Kullanıcı Düzenle");
+            @: toastr.error("Failed to update book record", "Edit Book Record");
         }
     });
     </script>
