--- a/Library.Admin/Views/BorrowedBooksPanel/Index.cshtml
+++ b/Library.Admin/Views/BorrowedBooksPanel/Index.cshtml
@@ -13,7 +13,7 @@
 <h2 class="page-title">Kullanıcı Listesi</h2>
 <div class="page-bar">
     <ul class="page-breadcrumb">
-        Sistemde bulunan ödünç alınmış kitaplar aşağıda listelenmiştir.
+        Borrowed books in the system are listed below.
     </ul>
     
 </div>
@@ -25,7 +25,7 @@
             <div class="portlet-title">
                 <div class="caption">
                     <i class="icon-users font-dark"></i>
-                    <span class="caption-subject bold uppercase">Kitaplar</span>
+                    <span class="caption-subject bold uppercase">Books</span>
                 </div>
 
             </div>
@@ -34,15 +34,15 @@
                     <thead>
                         <tr role="row">
 
-                            <th>Kitabı ödünç alan </th>
-                            <th>Kitap adı</th>
-                            <th>Yazar</th>
+                            <th>book borrower </th>
+                            <th>Book Name</th>
+                            <th>Author</th>
                             <th>Barcode</th>
-                            <th>Kitap Ücreti</th>
+                            <th>Borrow Fee</th>
                             <th>Campus</th>
-                            <th>Ödünç alma tarihi</th>
-                            <th>Ödünç alma bitiş tarihi</th>
-                            <th>İade durumu</th>
+                            <th>Borrow Date</th>
+                            <th>Borrow Expires Date</th>
+                            <th>Return Status</th>
                             <th></th>
 
 
