--- a/Library.Admin/Views/Shared/_Layout.cshtml
+++ b/Library.Admin/Views/Shared/_Layout.cshtml
@@ -83,12 +83,12 @@
                                     </li>*@
                                 <li>
                                     <a href="/Account/ChangePassword">
-                                        <i class="fa fa-lock"></i> Şifre Değiştir
+                                        <i class="fa fa-lock"></i> Change Password
                                     </a>
                                 </li>
                                 <li>
                                     <a href="" id="btnLogOff">
-                                        <i class="icon-key"></i> Oturumu Kapat
+                                        <i class="icon-key"></i> Sign Out
                                     </a>
                                 </li>
                             </ul>
@@ -108,7 +108,7 @@
                     <li class="nav-item @SetMenuClass("")">
                         <a href="/UserPanel/Index" class="nav-link nav-toggle">
                             <i class="icon-users"></i>
-                            <span class="title">Kullanıcılar</span>
+                            <span class="title">Users</span>
                         </a>
                     </li>
 
@@ -116,37 +116,29 @@
                     <li class="nav-item @SetMenuClass("")">
                         <a href="/BooksPanel/Index" class="nav-link nav-toggle">
                             <i class="icon-book-open"></i>
-                            <span class="title">Kitaplar</span>
+                            <span class="title">Books</span>
                         </a>
                     </li>
 
-                    <li class="nav-item  @SetMenuClass("")">
-                        <a href="/Notification/Index" class="nav-link nav-toggle">
-                            <i class="icon-book-open"></i>
-                            <span class="title">Duyurular</span>
-                        </a>
-                    </li>
+                   
                     <li class="nav-item @SetMenuClass("")">
                         <a href="/BookRequestsPanel/Index" class="nav-link nav-toggle">
-                            <i class="icon-book-open"></i>
-                            <span class="title">Kitap İstekleri</span>
+                            <i class="icon-calendar"></i>
+                            <span class="title">Book Requests</span>
                         </a>
                     </li>
                     <li class="nav-item @SetMenuClass("")">
                         <a href="/ReportsPanel/Index" class="nav-link nav-toggle">
-                            <i class="icon-book-open"></i>
-                            <span class="title">Raporlar</span>
+                            <i class="icon-cloud-upload"></i>
+                            <span class="title">Reports</span>
                         </a>
                     </li>
-                    
-                        
-                    
-                        <li class="nav-item @SetMenuClass("")">
+                    <li class="nav-item @SetMenuClass("")">
                             <a href="/BorrowedBooksPanel/Index" class="nav-link nav-toggle">
-                                <i class="icon-book-open"></i>
-                                <span class="title">Ödünç Alınan Kitaplar</span>
+                                <i class="icon-calendar"></i>
+                                <span class="title">Borrowed Books</span>
                             </a>
-                        </li>
+                    </li>
 
 
                 </ul>
@@ -196,7 +188,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 
-    <script src="/Content/global/plugins/bootstrap-datepicker/js/bootstrap-datepicker.min.js" type="text/javascript"></script>
+    @*<script src="/Content/global/plugins/bootstrap-datepicker/js/bootstrap-datepicker.min.js" type="text/javascript"></script>*@
     <script type="text/javascript">
         $(document).ready(function () {
             $('.page-sidebar-menu .active a').append('<span class="selected"></span>');
