--- a/Library.Admin/Views/UserPanel/Index.cshtml
+++ b/Library.Admin/Views/UserPanel/Index.cshtml
@@ -7,13 +7,13 @@
 <h2 class="page-title">Kullanıcı Listesi</h2>
 <div class="page-bar">
     <ul class="page-breadcrumb">
-        Sistemde bulunan kullanıcılar aşağıda listelenmiştir.
+        The users in the system are listed below.
     </ul>
     <div class="page-toolbar">
         <div class="btn-group pull-right">
             <a href="/UserPanel/Create" class="btn btn-fit-height red">
                 <i class="fa fa-plus"></i>
-                Yeni Kullanıcı
+                New User
             </a>
         </div>
     </div>
@@ -26,7 +26,7 @@
             <div class="portlet-title">
                 <div class="caption">
                     <i class="icon-users font-dark"></i>
-                    <span class="caption-subject bold uppercase">Kullanıcılar</span>
+                    <span class="caption-subject bold uppercase">Users</span>
                 </div>
 
             </div>
@@ -35,12 +35,12 @@
                     <thead>
                         <tr role="row">
 
-                            <th>İsim</th>
-                            <th>Soyisim</th>
-                            <th>E-posta</th>
-                            <th>Kullanıcı Tipi</th>
+                            <th>Name</th>
+                            <th>Surname</th>
+                            <th>Email</th>
+                            <th>User Type</th>
                             <th>Campus</th>
-                            <th>Durum</th>
+                            <th>status</th>
                             <th></th>
 
 
