--- a/Library.Admin/Views/ReportsPanel/Report.cshtml
+++ b/Library.Admin/Views/ReportsPanel/Report.cshtml
@@ -44,7 +44,7 @@
     </div>
     <div class="row">
         <div style="align-content:center;">
-            <table>
+            <table style="min-width:400px; width:400px;">
                 <tr>
                     <td>Campus Name</td>
                     <td><b>@Model.CampusName</b></td>
